# qumulator-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml  test.yml
notebooks/: anyon_braiding.ipynb  chsh_bell.ipynb  h12_vqe.ipynb  klt_cluster_demo.ipynb  klt_greens_demo.ipynb  prime_factoring.ipynb  qubo.ipynb  tebd_quench_demo.ipynb  time_crystal.ipynb  vortex_geometry.ipynb  willow_rcs_benchmark.ipynb  wormhole.ipynb
src/qumulator/: __init__.py  _cli.py  _http.py  circuit.py  models.py  resources.py
src/qumulator/backends/: __init__.py  cirq_simulator.py  qiskit_backend.py
tests/: test_circuit_client.py
