[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qumulator-sdk"
version = "0.1.9"
description = "Python client SDK for the Qumulator quantum computing API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx", "httpx"]
qiskit = ["qiskit>=1.0"]
cirq = ["cirq>=1.0"]
all = ["qiskit>=1.0", "cirq>=1.0"]

[project.scripts]
qumulator = "qumulator._cli:main"

[tool.setuptools.packages.find]
where = ["src"]
